final reading git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8509 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/case.bib
+++ b/doc/case.bib
@@ -77,7 +77,10 @@ Artificial Intelligence and Simulation of Behaviour")
       author = {Mueller, O. and Nipkow, T. and von Oheimb, D. and Slotosch, O.},
       title = {{HOLCF} = {HOL} + {LCF}},
       journal = {Journal of Functional Programming}, 
-      year = {1999}
+      year = {1999},
+    number =	"2",
+  volume =	"9",
+  pages =	"191--223",    
 }
 
 @article{abram93,
@@ -691,7 +694,7 @@ binary computers},
 
 @book{Hudak,
    author = {Hudak, P.},
-   title = {The Haskell School of Expression},
+   title = {The {Haskell} School of Expression},
    publisher = {Cambridge University Press},
    year = {2000}
 }
@@ -702,6 +705,7 @@ binary computers},
   year = {2005},
   keywords = {monad dynamic logic HasCASL},
   pdfurl = {http://www.cs.chalmers.se/~denniswa/dipl-online.pdf},
+  note = {Diploma thesis, University of Bremen},
 }
 
 @InProceedings{Hets,
@@ -749,7 +753,6 @@ K. and Woelfl, S.},
    author = "Mossakowski, T.",
    title = "Hets user guide",
    institution = "Universitaet Bremen",
-   type = "Tutorial",
    year = 2006
 )
 
@@ -780,20 +783,28 @@ publisher = "MIT Press", year = "1993"
 }
 
 @inproceedings{Thompson92,
-   author = {Thompson, S.},
-   booktitle = {Functional Programming},
-   editors = {J. Launchbury and P. M. Sansom},
-   publisher = {Springer},
-   title = {Formulating {H}askell},
-   year = {1992}
+  title =	"Formulating Haskell",
+  author =	"Simon Thompson",
+  publisher =	"Springer",
+  year = 	"1992",
+  bibdate =	"2003-02-19",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/conf/fp/fp1992.html#Thompson92",
+  booktitle =	"Functional Programming",
+  editor =	"John Launchbury and Patrick M. Sansom",
+  ISBN = 	"3-540-19820-2",
+  pages =	"258--268",
+  series =	"Workshops in Computing",
 }
 
 @Article{Thompson95,
   author = 	 {Thompson, S.},
   title = 	 {A Logic for {M}iranda, revisited},
   journal =	 {Formal Aspects of Computing},
-  year =	 {1994},
-  volume =       {3}, 
+  year =	 {1995},
+volume =	"7",
+  number =	"4",
+  pages =	"412--429",
   publisher =    {BCS}
 }
 
@@ -811,6 +822,8 @@ publisher = "MIT Press", year = "1993"
   journal =	 {Formal Aspects of Computing},
   year =	 {1989},
   volume =       {1}, 
+  number =	"4",
+  pages =	"339--365",  
   publisher =    {BCS}
 }
 
@@ -866,7 +879,7 @@ year = {2004}
 }
 
 @Article{journals/jfp/Faxen02,
-  title =	"A static semantics for Haskell",
+  title =	"A static semantics for {Haskell}",
   author =	"Karl-Filip Fax{\'e}n",
   journal =	"J. Funct. Program",
   year = 	"2002",
@@ -880,7 +893,7 @@ year = {2004}
 
 
 @Misc{oai:CiteSeerPSU:71374,
-  title =	"A Dynamic Semantics for Haskell",
+  title =	"A Dynamic Semantics for {Haskell}",
   author =	"Kevin Hammond and Cordelia Hall",
   year = 	"1992",
   month =	oct # "~20",
@@ -913,4 +926,10 @@ year = {2004}
 		 http://www.softlab.ntua.gr/~nickie/haskell/papers/dynamic-semantics.ps.gz",
 }
 
+
+@Misc{HaskellMail05,
+  author = 	 {Till Mossakowski},
+  year = 	 {2005},
+  note = 	 {Mail to {Haskell} mailing list, see \url{http://www.haskell.org/pipermail/haskell/2005-January/015238.html}},
+}
 
