improved definition of lifted function spaces and explanation of newtype translation git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8510 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/case.bib
+++ b/doc/case.bib
@@ -764,10 +764,15 @@ K. and Woelfl, S.},
    year = 2005
 )
 
-@habilitationthesis{MossaTh, 
-author = {Mossakowski, T.}, 
-title = {Heterogeneous Specification and the Heterogeneous Tool Set, {H}abilitation {T}hesis},
-year = {2005} }
+@misc{MossaTh,
+  author =	 {Mossakowski, T.},
+  title =	 {Heterogeneous Specification and the Heterogeneous
+                  Tool Set, {H}abilitation {T}hesis},
+  year =	 {2005},
+  note =	 {University of Bremen},
+}
+
+
 
 @book{ThompsonB,
    author = {Thompson, S.},
@@ -933,3 +938,13 @@ year = {2004}
   note = 	 {Mail to {Haskell} mailing list, see \url{http://www.haskell.org/pipermail/haskell/2005-January/015238.html}},
 }
 
+@InCollection{MossakowskiEtAl07b,
+  author = {Till Mossakowski and Christian Maeder and Klaus L{\"u}ttich},
+  title = {The {H}eterogeneous {T}ool {S}et},
+  year = {2007},
+  editor = {Bernhard Beckert},
+  booktitle = {VERIFY 2007},
+  series = {CEUR Workshop Proceedings},
+  volume = {259},
+  status = {Reviewed}
+}
