--- a/README
+++ b/README
@@ -1,22 +1,31 @@
-This README belongs to a "The heterogeneous tool set" (Hets) release
-(and does not apply to sources directly obtained via cvs).
+This README belongs to a "The heterogeneous tool set" (Hets) source
+release created by "make release" from the original svn repository.
+(for svn see http://subversion.tigris.org/)
+
+The original svn sources can be obtained by:
+svn co https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk Hets
 
 Information not contained here can be found in the Hets user guide
-(doc/UserGuide.pdf) or on the Hets web page
-(www.informatik.uni-bremen.de/cofi/hets).
+(doc/UserGuide.pdf) or on the Hets web page www.dfki.de/sks/hets.
 
-The subject of this release is a binary "hets" that is able to analyse
-heterogeneous and in particular CASL specifications.
+The subject of this source release is to create a binary "hets" that
+is able to analyse heterogeneous and in particular CASL
+specifications.
 
-The sources need to be compiled with ghc Glasgow Haskell Compiler
-(www.haskell.org/ghc) version 6.6! Haskell is also a part of Hets via
-"Programatica" (www.cse.ogi.edu/PacSoft/projects/programatica).
+The sources need to be compiled using ghc Glasgow Haskell Compiler
+(www.haskell.org/ghc) version 6.6 or 6.6.1! Haskell as a logic is also
+a part of Hets via "Programatica"
+(www.cse.ogi.edu/PacSoft/projects/programatica).
 
-Beside output written to the console (stdout) or to files hets, can
+Beside output written to the console (stdout) or to files, hets can
 display graphs using "uDraw(Graph)", formerly "daVinci"
 (www.informatik.uni-bremen.de/uDrawGraph)
 
-For hets to find "uDrawGraph", the environment variables UDG_HOME and
+Additionally, in particular for the binding to uDrawGraph,
+the sources of the uniform workbench are required:
+https://svn-agbkb.informatik.uni-bremen.de/uni/trunk
+
+For hets (and uni) to find "uDrawGraph", the environment variables UDG_HOME and
 UNIDAVINCI must be set to the installation directory of uDraw(Graph) and to
 the actual executable, respectively.
 
@@ -24,11 +33,15 @@ export UNIDAVINCI=$UDG_HOME/bin/uDrawGraph
 
 A typical call of hets is then: hets -g Basic/Numbers.casl
 
-If you need to rebuild the hets binary follow the instructions in INSTALL
-(This README belongs a to release created by "make release", in case
-that you obtained the HetCATS sources as CVS tree)
+Example specifications can be found under:
+https://svn-agbkb.informatik.uni-bremen.de/Hets-lib/trunk
+
+If you need to build the hets binary follow the instructions in
+INSTALL, alternatively try to get a binary or a complete installer from:
+www.dfki.de/sks/hets/installation_e.htm
 
 The heterogeneous tool set (Hets) is mainly maintained by
-Christian Maeder (Christian.Maeder@dfki.de) and Till Mossakowski
-(till@informatik.uni-bremen.de).
+Christian Maeder (Christian.Maeder@dfki.de) and
+Till Mossakowski (Till.Mossakowski@dfki.de).
+
 The mailing list is hets-devel@informatik.uni-bremen.de.
