Just removed an error. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8847 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/LiveCD/README
+++ b/utils/LiveCD/README
@@ -36,8 +36,8 @@ http://www.morphix.org/doc/how_tos/docbook_html/index.html
 # 2. Create infrastructure
 
 1.
-Switch to a directory where the all the files for the CD creation should be
-stored and create the following folder:
+Switch to a directory where all the files for the CD creation should be stored
+and create the following folder:
 
 copy  - Files in this directory are mapped to the LiveCD root filesystem. If
         there is a file copy/somedir/file the file is mapped to /somedir/file.
