modified README file git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8882 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/README
+++ b/GMP/README
@@ -16,7 +16,6 @@ GradedML:	Graded Modal Logic
 CoalitionL:	Coalition Logic
 MajorityL:	Majority Logic
 
-Two Helper Parsers:
-
+Helpfull:
 LWBParser:	Parser for LWB formulas
-ToRacerParser:	Parser to make Racer formulas
+ToRacer:        Our Formula -> Racer Formula Transformer
