Started optimization for Graded ML git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9020 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/README
+++ b/GMP/README
@@ -7,7 +7,7 @@ Lexer.hs:		Lexer for the different Parsers
 ModalLogic.hs:		Modal Logic class & defaults
 Main.hs:		Main
 
-The implementation of the logic dependant methods can be found in:
+The implementation of the logic dependent methods can be found in:
 
 GenericML:	Generic Modal Logic
 ModalK:		K Modal Logic
@@ -17,5 +17,5 @@ CoalitionL:	Coalition Logic
 MajorityL:	Majority Logic
 
 Helpfull:
-LWBParser:	Parser for LWB formulas
+LWBParser:	Parser for LWB formulas used for Modal K & KD
 ToRacer:        Our Formula -> Racer Formula Transformer
