Tester file further modified. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9181 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/README
+++ b/GMP/README
@@ -9,13 +9,14 @@ Main.hs:		Main
 
 The implementation of the logic dependent methods can be found in:
 
-GenericML:	Generic Modal Logic
-ModalK:		K Modal Logic
-ModalKD:	KD Modal Logic
-GradedML:	Graded Modal Logic
-CoalitionL:	Coalition Logic
-MajorityL:	Majority Logic
+GenericML:	        Generic Modal Logic
+ModalK:		        K Modal Logic
+ModalKD:	        KD Modal Logic
+GradedML:	        Graded Modal Logic
+CoalitionL:	        Coalition Logic
+MajorityL:	        Majority Logic          -- not completed
 
 Helpfull:
-LWBParser:	Parser for LWB formulas used for Modal K & KD
-ToRacer:        Our Formula -> Racer Formula Transformer
+LWBParser:	        Parser for LWB formulas used for Modal K & KD
+ToRacer:                Our Formula -> Racer Formula Transformer
+Tester4IneqSolver:      Tester for the inequality solver used in Graded ML
