test update git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9205 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/README
+++ b/GMP/README
@@ -18,5 +18,5 @@ MajorityL:	        Majority Logic          -- not completed
 
 Helpfull:
 LWBParser:	        Parser for LWB formulas used for Modal K & KD
-ToRacer:                Our Formula -> Racer Formula Transformer
+ToRacer:                Our Formula Type -> Racer Formula Type
 Tester4IneqSolver:      Tester for the inequality solver used in Graded ML
