added esort to CASL git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9288 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -200,6 +200,8 @@
 }%% end of KWC definition
 \newcommand{\SORT}[1][preds]{\KWC[##1]{sort}\xspace}
 \newcommand{\SORTS}[1][preds]{\KWC[##1]{sorts}\xspace}
+\newcommand{\ESORT}[1][preds]{\KWC[##1]{esort}\xspace}
+\newcommand{\ESORTS}[1][preds]{\KWC[##1]{esorts}\xspace}
 \newcommand{\OP}[1][preds]{\KWC[##1]{op}\xspace}
 \newcommand{\OPS}[1][preds]{\KWC[##1]{ops}\xspace}
 \newcommand{\PRED}[1][preds]{\KWC[##1]{pred}\xspace}
