Restructuring ... git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9354 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/README
+++ b/GMP/README
@@ -19,5 +19,5 @@ MajorityL:	        Majority Logic          -- not completed
 Helpful: (in directory "extra")
 LWBParser:	        Parser for LWB formulas used for Modal K & KD
 ToRacer:                Our Formula Type -> Racer Formula Type
-Tester4IneqSolver:      Tester for the inequality solver used in Graded ML
+IneqSolvTester:         Tester for the inequality solver used in Graded ML
 TestGenGML:             Generator of GML formulas
