supply --user to configure git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9413 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/INSTALL
+++ b/INSTALL
@@ -27,9 +27,10 @@ automatically for further hets packages.
 cd uni/HaXml
 tar zxvf HaXml.tgz
 cd HaXml-1.13.2/
-runhaskell Setup.hs configure --prefix=$HOME/.ghc/i386-Linux-hets-packages
+runhaskell Setup.hs configure --user \
+  --prefix=$HOME/.ghc/i386-Linux-hets-packages
 runhaskell Setup.hs build
-runhaskell Setup.hs install --user
+runhaskell Setup.hs install 
 
 Within uni call:
 ./configure
